# Research-agent

./: .env.example  .gitignore  Makefile  README.md  environment.yml  pyproject.toml  pyroproject.toml
.github/workflows/: ci.yml
agent/: graph.py  llm.py  nodes.py  state.py
agent/tools/: __init__.py  arxiv_search.py  deduplicator.py  ranker.py  semantic_scholar.py
config/: .env.example  logging.py  settings.py
schemas/: paper.py
scripts/: run_agent.py
tests/: conftest.py  test_arxiv_search.py  test_deduplicator.py  test_graph.py  test_nodes.py  test_ranker.py  test_semantic_scholar.py  test_sprint1_integration.py  test_tools_integration.py
